@@ -181,7 +181,7 @@ to the URL:
 
 =item C<connect_timeout>
 
-B<Experimental>: Connect timeout in seconds.  May be specified as a
+Connect timeout in seconds.  May be specified as a
 floating point, that is C<0.2> is 20 milliseconds.
 
 =item C<protocol>
@@ -194,9 +194,7 @@ Boolean C<true> or C<false>.
 
 =item C<timeout>
 
-IO timeout in seconds.
-
-B<Experimental>: May be specified as a
+IO timeout in seconds. May be specified as a
 floating point, that is C<0.2> is 20 milliseconds.
 
 =item C<verify_mode>
